--- a/Lab4.2/app/src/main/res/layout/activity_main.xml
+++ b/Lab4.2/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/button"
+        android:text="show"
+        android:onClick="showList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/showList"
-        android:text="Hello World!" />
+        android:id="@+id/branch"
+        android:text="Hello World!" >
+
+    </ListView>
 </LinearLayout>
